# docs

./: .gitignore
cert/: cert.txt  gpg_key.txt
crypto/: cryptsetup.txt  csr.txt  dmsetup.txt
debug/: jtag_trace32.txt
docker/: docker_basic.txt  docker_build.txt  docker_intro.txt  remote-deployment-tcp.txt
ebpf/: dependencies.md  ebpf-commands.md
hacking/: install.txt  macspoof.txt  nmap_ipinfo.txt  proxychains.txt  tor.txt  (+2 more)
oop/designpatterns/: CMakeLists.txt  README.md  strategy.cc
oop/designpatterns/adapter/: CMakeLists.txt  adapter.cc
oop/designpatterns/bridge/: CMakeLists.txt  bridge-impl.cc
oop/designpatterns/bridge/pimpl-idiom/: person.cc  person.hpp
oop/designpatterns/bridge/pimpl-wrap/: foo.cc  foo.hpp  pimpl.cc  pimpl.hpp
oop/designpatterns/bridge/refactor/: original.cc  refactored.cc
oop/designpatterns/builder/: CMakeLists.txt  builder-facets.cc  codebuilder.cc  fluent-builder.cc  groovy-style.cc
oop/designpatterns/chain-of-responsibility/: CMakeLists.txt  README.md  cor.cc  cor_broker.cc
oop/designpatterns/command/: CMakeLists.txt  README.md  command.cc  command_composite.cc  command_undo.cc
oop/designpatterns/composite/: CMakeLists.txt  README.md  array-backed.cc  composite-neurons.cc  geometric.cc  integers.cc
oop/designpatterns/decorator/: CMakeLists.txt  README.md  dynamic-decorator.cc  dynamic.cpp  functional-decorator.cc  static-decorator.cc
oop/designpatterns/facade/: CMakeLists.txt  README.md  facade.cc
oop/designpatterns/factory/: CMakeLists.txt  abstract-factory.cc  factory-method.cc  factory.cc  inner-factory.cc
oop/designpatterns/flyweight/: CMakeLists.txt  README.md  capitalize.cc  flyweight.cc  word-captitalize.cc
oop/designpatterns/interpreter/: CMakeLists.txt  README.md  handmade-interpreter.cc
oop/designpatterns/iterator/: CMakeLists.txt  README.md  boost-iterator-facade.cc  iterator-binary-tree.cc  iterator-coroutines.cc  iterator-stl.cc
oop/designpatterns/mediator/: CMakeLists.txt  README.md  soccer.cc
oop/designpatterns/mediator/chatroom/: CMakeLists.txt  chatroom.cc  chatroom.hpp  main.cc  person.cc  person.hpp
oop/designpatterns/memento/: CMakeLists.txt  README.md  memento.cc
oop/designpatterns/observer/: CMakeLists.txt  README.md
oop/designpatterns/observer/observable/: CMakeLists.txt  headers.hpp  main.cc  saferobservable.cc  saferobservable.hpp
oop/designpatterns/prototype/: CMakeLists.txt  deep-copy.cc  prototype.cc
oop/designpatterns/proxy/: CMakeLists.txt  README.md  communications_proxy.cc  property_proxy.cc  smart_pointers.cc  virtual_proxy.cc
oop/designpatterns/singleton/: CMakeLists.txt  di.hpp  multiton.cc  population.txt  simple-singleton.cc  singleton-abstraction.cc  singleton-lifetime.cc
oop/designpatterns/solid-design-principles/: CMakeLists.txt  dependency-inversion.cc  interface-segregation.cc  liskov_substitution.cc  open_closed.cc  single_responsibility.cc
oop/designpatterns/state/: CMakeLists.txt  README.md  boost-msm-state.cc  classic.cc  handmade.cc
oop/designpatterns/strategy/: CMakeLists.txt  README.md  dynamic.cc  static.cc
oop/designpatterns/template-method/: CMakeLists.txt  README.md  template-method.cc
oop/designpatterns/visitor/: CMakeLists.txt  README.md  acyclic.cc  intrusive.cc  multimethods.cc  reflective.cc  std-visit.cc  visitor-double.cc
(+47 files in other folders)
